# fortiapipy

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  tree.txt
docs/: api.rst  conf.py  index.md
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/_sources/: api.rst.txt  index.rst.txt
fortiapipy/: __init__.py  core.py  enums.py  exceptions.py  fortios.py  logger.py
