[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fortiapipy"
version = "0.1.0"
description = "A Fortinet API client library for Python."
authors = [
    { name = "The Network Entropologist", url = "https://github.com/NetworkEntropologist" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",      # if your external API uses it
]
