[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fortiapipy"
version = "0.1.0"
description = "A Fortinet API client library for Python."
authors = [
    { name = "The Network Entropologist"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
]
[tool.black]
line-length = 88
target-version = ["py310"]
[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I"]
ignore = []
fix = true
